JumpScript/tests/baselines/reference/arrowFunctionMissingCurlyWithSemicolon.errors.txt
tests/cases/compiler/arrowFunctionMissingCurlyWithSemicolon.jump(2,15): error TS1109: Expression expected.


==== tests/cases/compiler/arrowFunctionMissingCurlyWithSemicolon.jump (1 errors) ====
    // Should error at semicolon.
    var f = () => ;
                  ~
!!! error TS1109: Expression expected.
    var b = 1 * 2 * 3 * 4;
    var square = (x: number) => x * x;